// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-deployment-preflight - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Performs comprehensive preflight validation of Bicep deployments to Azure, including template syntax validation, what-if analysis, and permission checks. Use this skill before any deployment to Azure to preview changes, identify potential issues, and ensure the deployment will succeed. Activate when users mention deploying to Azure, validating Bicep files, checking deployment permissions, previewing infrastructure changes, running what-if, or preparing for azd provision.",
  "extractedKeywords": [
    "activate",
    "analysis",
    "authentication",
    "azure",
    "before",
    "bicep",
    "changes",
    "checking",
    "checks",
    "cli",
    "comprehensive",
    "container",
    "deploy",
    "deploying",
    "deployment",
    "deployments",
    "ensure",
    "files",
    "identify",
    "including",
    "infrastructure",
    "issues",
    "mcp",
    "mention",
    "performs",
    "permission",
    "permissions",
    "potential",
    "preflight",
    "preparing",
    "preview",
    "previewing",
    "provision",
    "rbac",
    "running",
    "skill",
    "succeed",
    "syntax",
    "template",
    "this",
    "users",
    "validating",
    "validation",
    "what-if",
    "when",
    "will",
  ],
  "name": "azure-deployment-preflight",
}
`;

exports[`azure-deployment-preflight - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "activate",
  "analysis",
  "authentication",
  "azure",
  "before",
  "bicep",
  "changes",
  "checking",
  "checks",
  "cli",
  "comprehensive",
  "container",
  "deploy",
  "deploying",
  "deployment",
  "deployments",
  "ensure",
  "files",
  "identify",
  "including",
  "infrastructure",
  "issues",
  "mcp",
  "mention",
  "performs",
  "permission",
  "permissions",
  "potential",
  "preflight",
  "preparing",
  "preview",
  "previewing",
  "provision",
  "rbac",
  "running",
  "skill",
  "succeed",
  "syntax",
  "template",
  "this",
  "users",
  "validating",
  "validation",
  "what-if",
  "when",
  "will",
]
`;
